AS#152122905738603, Fix alignment and copy for Files upload section
-- Fixed all sub tasks except >> On the right-hand side, move comma as so: "declaration.txt,"

--- a/assets/css/directives/tc-fp-file-input.directive.scss
+++ b/assets/css/directives/tc-fp-file-input.directive.scss
@@ -27,6 +27,10 @@ tc-fp-file-input {
     z-index: 1;
   }
 
+  .tc-label__asterisk {
+    right: 0px;
+  }
+
   .tc-fp-file-drag-drop {
     width: calc(100% - 4px);
     left: 0;
@@ -36,6 +40,7 @@ tc-fp-file-input {
     position: relative;
     color: $tc-gray-50 !important;
     padding: 25px !important;
+    margin-left: 0px !important;
     text-align: center;
 
     // div used to show progress bar for drop upload
