--- a/assets/css/submissions/submit-file.scss
+++ b/assets/css/submissions/submit-file.scss
@@ -79,7 +79,7 @@ tc-fp-file-input {
   flex-wrap: wrap;
   justify-content: space-around;
 
-  @media screen and (min-width: 1000px) {
+  @media screen and (min-width: 875px) {
     justify-content: space-between;
   }
 }
